# agent-life-adapters

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test-install.yml
adapter-openclaw/: Cargo.toml  IntegrationTesting.md  README.md
adapter-openclaw/src/: credential_map.rs  export.rs  identity_parser.rs  import.rs  lib.rs  memory_parser.rs  principals_parser.rs
adapter-openclaw/tests/: cross_import.rs  delta_stability.rs  export_correctness.rs  import_correctness.rs  round_trip.rs
adapter-openclaw/tests/fixtures/community-patterns/: .alf-agent-id  SOUL.md
adapter-openclaw/tests/fixtures/community-patterns/memory/: 2026-02-01.md  active-context.md
adapter-openclaw/tests/fixtures/empty/: .alf-agent-id
adapter-openclaw/tests/fixtures/minimal/: .alf-agent-id  SOUL.md
adapter-openclaw/tests/fixtures/standard/: .alf-agent-id  AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
adapter-openclaw/tests/fixtures/standard/memory/: 2026-01-15.md  2026-01-16.md  active-context.md  gating-policies.md  project-clawsmith.md
adapter-zeroclaw/: Cargo.toml  README.md
adapter-zeroclaw/src/: export.rs  (+8 more)
alf-cli/: Cargo.toml
alf-cli/fixtures/: synthetic-agent.alf
alf-cli/fixtures/reports/: integration_test_report_v1.0.0-rc.1.md
alf-cli/src/: adapter.rs  api_client.rs  config.rs  context.rs  main.rs  output.rs  state.rs
alf-cli/src/commands/: check.rs  export.rs  help.rs  import.rs  login.rs  mod.rs  restore.rs  sync.rs  validate.rs
alf-cli/tests/: cli_e2e.rs  integration_tests.rs  sync_round_trip.rs
alf-core/: Cargo.toml
alf-core/src/: adapter.rs  archive.rs  credentials.rs  delta.rs  identity.rs  lib.rs  manifest.rs  memory.rs  partition.rs  principals.rs  rebuild.rs  restore.rs  validation.rs
docs/: agent-life-implementation-plan.md  clawhub-security-mitigation-plan.md  cli-reference.md  phase-3.5-implementation-plan.md  rebuild-snapshot-implementation-plan.md  spec-3.5a-skills-hub-install-tests.md  style.css
scripts/: .gitignore  generate_fixtures.sh  generate_synthetic_data.py  install.sh  integration_walkthrough.py  mutate_zeroclaw.py  requirements.txt  run_integration_tests.sh  seed_zeroclaw_baseline.py  test_install.sh
(+22 files in other folders)
