[package]
name = "alf-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Agent Life Format — export, import, validate, and sync agent data"
license = "MIT"
repository = "https://github.com/agent-life/agent-life-adapters"

[[bin]]
name = "alf"
path = "src/main.rs"

[dependencies]
alf-core = { path = "../alf-core" }
adapter-openclaw = { path = "../adapter-openclaw" }
adapter-zeroclaw = { path = "../adapter-zeroclaw" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
assert_cmd = "2"
predicates = "3"
serde_json = "1"


