[package]
name = "alf-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Agent Life Format (ALF) — types, I/O, and validation"
license = "MIT"
repository = "https://github.com/agent-life/agent-life-adapters"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"